# lightning-fold

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
src/lightning_fold/: __init__.py  datamodule.py  loop.py
src/tests/: boring_fold_datamodule.py  boring_logger.py  boring_model.py  test_fold.py
